fix class wrapper tour section

--- a/src/index.html
+++ b/src/index.html
@@ -83,14 +83,13 @@ License: -
       <div class="container">
         <div class="tours">
           <span><img src="./assets/media/images/Arrow_left.png" alt="" id="btn-prev-tour"></span>
-          <div class="tour">
-            <div class="tour-list">
-              
+          <div class="tour-content">
+            <div class="tour-list">            
               <div class="img-tour">
                 <h3>slowing</h3>
                 <h3>down</h3>
               </div>
-              <div class="tour-content">
+              <div class="tour-contents">
                 <p>20 NOV 2020</p>
                 <h2>Indonesia Tour, Jakarta Indie Fest</h2>
                 <h6>Gelora Bung Karno</h6>
@@ -105,7 +104,7 @@ License: -
                 <h3>slowing</h3>
                 <h3>down</h3>
               </div>
-              <div class="tour-content">
+              <div class="tour-contents">
                 <p>20 NOV 2020</p>
                 <h2>Indonesia Tour, Jakarta Indie Fest</h2>
                 <h6>Gelora Bung Karno</h6>
@@ -120,7 +119,7 @@ License: -
                 <h3>slowing</h3>
                 <h3>down</h3>
               </div>
-              <div class="tour-content">
+              <div class="tour-contents">
                 <p>20 NOV 2020</p>
                 <h2>Indonesia Tour, Jakarta Indie Fest</h2>
                 <h6>Gelora Bung Karno</h6>
